# whisper-test

./: README.md  localtest.py  main.py  pyproject.toml
realtime/: index.html  localfile.py  readme.md  record.html  server.py
